email change + better goal description

--- a/closetshare.html
+++ b/closetshare.html
@@ -57,7 +57,7 @@
         <div id="project-brief-left"><!-- left side -->
           <div class="project-brief-element">
             <h3>Project Goal</h3>
-            <p>To design, develop, and deploy a fully functional cross-platform mobile application using React Native.</p>
+            <p>To design, develop, and deploy a fully functional cross-platform mobile fashion app using React Native.</p>
           </div>
       
           <div class="project-brief-element">
@@ -476,7 +476,7 @@
 
     <div id = "footer-content">
       <h2> Let's Get in Touch, and Create Something Together </h2>
-      <p> howardchang822@hotmail.com <em>|</em> 778-822-6068 </p>
+      <p> hhc27@sfu.ca <em>|</em> 778-822-6068 </p>
 
       <div id = "footer-divider">
         <div id="footer-divider-left">
