--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
       <div id = "footer-content">
         <h2> Let's Get in Touch, and Create Something Together </h2>
-        <p> howardchang822@hotmail.com <em>|</em> 778-822-6068 </p>
+        <p> hhc27@sfu.ca <em>|</em> 778-822-6068 </p>
 
         <div id = "footer-divider">
           <div id="footer-divider-left">
