--- a/macaron.html
+++ b/macaron.html
@@ -57,7 +57,7 @@
         <div id="project-brief-left"><!-- left side -->
           <div class="project-brief-element">
             <h3>Project Goal</h3>
-            <p>To collaboratively design and code a fully functional, responsive company website.</p>
+            <p>To design and develop a functional, responsive website for a Macaron brand.</p>
           </div>
       
           <div class="project-brief-element">
@@ -348,7 +348,7 @@
 
     <div id = "footer-content">
       <h2> Let's Get in Touch, and Create Something Together </h2>
-      <p> howardchang822@hotmail.com <em>|</em> 778-822-6068 </p>
+      <p> hhc27@sfu.ca <em>|</em> 778-822-6068 </p>
 
       <div id = "footer-divider">
         <div id="footer-divider-left">
