--- a/craftconnect.html
+++ b/craftconnect.html
@@ -57,8 +57,7 @@
         <div id = "project-brief-left"><!-- left side -->
           <div class = "project-brief-element">
             <h3><span>Project Goal</span></h3>
-            <p>To propose a specific problem with an existing website of a socially good organization (Our client), and develop a
-              proper strategy to resolve that problem, backed up with strong evidence and rationale. 
+            <p>To propose and prototype a design solution that can help local artisans build up their business and customer base.
             </p>
           </div>
 
@@ -395,7 +394,7 @@
 
     <div id = "footer-content">
       <h2> Let's Get in Touch, and Create Something Together </h2>
-      <p> howardchang822@hotmail.com <em>|</em> 778-822-6068 </p>
+      <p> hhc27@sfu.ca <em>|</em> 778-822-6068 </p>
 
       <div id = "footer-divider">
         <div id="footer-divider-left">
