--- a/rabbitats.html
+++ b/rabbitats.html
@@ -57,8 +57,8 @@
         <div id="project-brief-left"><!-- left side -->
           <div class="project-brief-element">
             <h3>Project Goal</h3>
-            <p>To propose a specific problem with an existing website of a socially good organization (Our client), and develop a
-              proper strategy to resolve that problem, backed up with strong evidence and rationale. 
+            <p>To propose a specific problem with the existing Rabbitats website, and develop a
+              evidence backed and rational strategy to resolve that problem.
             </p>
           </div>
       
@@ -387,7 +387,7 @@
 
     <div id = "footer-content">
       <h2> Let's Get in Touch, and Create Something Together </h2>
-      <p> howardchang822@hotmail.com <em>|</em> 778-822-6068 </p>
+      <p> hhc27@sfu.ca <em>|</em> 778-822-6068 </p>
 
       <div id = "footer-divider">
         <div id="footer-divider-left">
