--- a/rabbitats.html
+++ b/rabbitats.html
@@ -22,7 +22,7 @@
     <header>
       <div id = "navigation-wrapper">
         <nav id="navigation">
-          <h2 id="logo"><a href="index.html"><em>Howard</em> Chang</a></h2>
+          <h2 id="logo"><a href="index.html">Howard Chang</a></h2>
           <div class="navigation-items">
             <a href="index.html#projects">My Works</a>
             <a href="about.html">About</a>
