--- a/about.html
+++ b/about.html
@@ -120,86 +120,86 @@
     <!--------------------------CURRENT PERSONAL GOAL CHECKLIST//-------------------------------------------------->
     <section id = "goal check list">
       <h1>Current Personal Goal Checklist</h1>
-      <div id = "about-lists-of-goals" class = "grid-area sub-section">
+      <div id="about-lists-of-goals" class="grid-area sub-section">
         <!--Column 1-->
-        <div class = "about-single-goal-list">
-          <div class = "about-goal">
+        <div class="about-single-goal-list">
+          <div class="about-goal">
             <img src="resources/about/checked goal icon.png"></img>
-            <h3>Being born</h3>
+            <p>Being born</p>
           </div>
-          <div class = "about-goal">
+          <div class="about-goal">
             <img src="resources/about/checked goal icon.png"></img>
-            <h3>Get into university</h3>
+            <p>Get into university</p>
           </div>
-          <div class = "about-goal">
+          <div class="about-goal">
             <img src="resources/about/checked goal icon.png"></img>
-            <h3>Get a gold medal from a Taekwondo tournament</h3>
+            <p>Get a gold medal from a Taekwondo tournament</p>
           </div>
-          <a class = "about-goal-links" href="https://www.sfu.ca/siat/showcase/spring-2024-project-showcase/iat-267-pixeldoggo.html" target="_blank" rel="noopener noreferrer">
+          <a class="about-goal-links" href="https://www.sfu.ca/siat/showcase/spring-2024-project-showcase/iat-267-pixeldoggo.html" target="_blank" rel="noopener noreferrer">
             <div class="about-goal">
               <img src="resources/about/checked goal icon.png" alt="Checked goal icon">
-              <h3>Build a ROBOT DOG</h3>
+              <p>Build a ROBOT DOG</p>
             </div>
           </a>
           <a class="about-goal-links" href="https://www.youtube.com/watch?v=v_59L0Iqcd0" target="_blank">
             <div class="about-goal">
               <img src="resources/about/checked goal icon.png" alt="">
-              <h3>Spread my obsession of bubble tea to the world</h3>
+              <p>Spread my obsession of bubble tea to the world</p>
             </div>
           </a>
         </div>
 
         <!--Column 2-->
-        <div class = "about-single-goal-list">
-          <div class = "about-goal">
+        <div class="about-single-goal-list">
+          <div class="about-goal">
             <img src="resources/about/checked goal icon.png"></img>
-            <h3>Successfully do my first latte art</h3>
+            <p>Successfully do my first latte art</p>
           </div>
-          <div class = "about-goal">
+          <div class="about-goal">
             <img src="resources/about/checked goal icon.png"></img>
-            <h3>Maintain a 100+ shrimp colony</h3>
+            <p>Maintain a 100+ shrimp colony</p>
           </div>
           <a class="about-goal-links" href="https://hcdoggo.itch.io/the-unfinished-symphony" target="_blank">
             <div class="about-goal">
               <img src="resources/about/checked goal icon.png" alt="">
-              <h3>Make a video game!</h3>
+              <p>Make a video game!</p>
             </div>
           </a>
           <a class="about-goal-links" href="https://www.youtube.com/watch?v=k35seqS3Hzo" target="_blank">
             <div class="about-goal">
               <img src="resources/about/checked goal icon.png" alt="">
-              <h3>Direct and edit a horror short film</h3>
+              <p>Direct and edit a horror short film</p>
             </div>
           </a>
-          <div class = "about-goal">
+          <div class="about-goal">
             <img src="resources/about/checked goal icon.png"></img>
-            <h3>Discover a field I'm passionate about</h3>
+            <p>Discover a field I'm passionate about</p>
           </div>
         </div>
 
         <!--Column 3-->
-        <div class = "about-single-goal-list">
-          <div class = "about-goal">
+        <div class="about-single-goal-list">
+          <div class="about-goal">
             <img src="resources/about/unchecked goal icon.png"></img>
-            <h3>Replace my broken badminton racket</h3>
+            <p>Replace my broken badminton racket</p>
           </div>
           <a class="about-goal-links" href="https://www.instagram.com/mr.bubblehoneytea/" target="_blank">
             <div class="about-goal">
               <img src="resources/about/unchecked goal icon.png" alt="">
-              <h3>Get over 1000 Instagram followers</h3>
+              <p>Get over 1000 Instagram followers</p>
             </div>
           </a>
-          <div class = "about-goal">
+          <div class="about-goal">
             <img src="resources/about/unchecked goal icon.png"></img>
-            <h3>Keep a plant alive for over a year</h3>
+            <p>Keep a plant alive for over a year</p>
           </div>
-          <div class = "about-goal">
+          <div class="about-goal">
             <img src="resources/about/unchecked goal icon.png"></img>
-            <h3>Travel to all 7 continents</h3>
+            <p>Travel to all 7 continents</p>
           </div>
-          <div id = "about-meeting-you" class = "about-goal">
+          <div id="about-meeting-you" class="about-goal">
             <img src="resources/about/unchecked goal icon.png"></img>
-            <h3>Meeting YOU </h3>
+            <p><strong>Meeting YOU </strong></p>
           </div>
         </div>
       </div>
