logo change and spacing

--- a/closetshare.html
+++ b/closetshare.html
@@ -420,7 +420,7 @@
     <!--------------------------KEY REFLECTIONS //-------------------------------------------------->
     <section id = "key-reflections">
     <h1>Key Reflections</h1>
-    <div class = "vertical-stack sub-section">
+    <div class = "vertical-stack">
       <div>
         <h2><strong>Adaption</strong> is Key</h2>
         <div class = "paragraph-with-break">
