--- a/craftconnect.html
+++ b/craftconnect.html
@@ -22,7 +22,9 @@
     <header>
       <div id = "navigation-wrapper">
         <nav id="navigation">
-          <h2 id="logo"><a href="index.html">Howard Chang</a></h2>
+          <a id="logo" href="index.html">
+            <img src="resources/HCLogo.png" alt="Howard Chang Logo">
+          </a>
           <div class="navigation-items">
             <a href="index.html#projects">My Works</a>
             <a href="about.html">About</a>
