--- a/index.html
+++ b/index.html
@@ -45,28 +45,29 @@
     <div id = "content">
 <!--------------------------INTRODUCTION //-------------------------------------------------->
       <section id = "introduction" class = "grid-area">
-          <div id = "introduction-left" class = "vertical-stack">
-            <div id = "title-heading">
-              <h1 id = "heading-hello-howard">I'm Howard, a......</h1>
-              <div id ="heading-digital-product-designer">
-                <h1>PRODU<span class = "kern-CT">C</span>T</h1>
-                <h1><strong>DESIGNER</strong></h1>
-              </div>
+        <div id = "introduction-left" class = "vertical-stack">
+          <div id = "title-heading">
+            <h1 id = "heading-hello-howard">Hi! I'm Howard, a product designer seeking to......</h1>
+            <div id ="heading-digital-product-designer">
+              <h1>CREATE A</h1>
+              <h1>LASTING</h1>
+              <h1><strong>IMPA<span class = "kern-CT">CT</span></strong></h1>
             </div>
-            <div class = "paragraph-with-break">
-              <p>
-                I’m a SIAT student at Simon Fraser University with a background in <strong>design, computing science, and business</strong>. I seek to create lasting impact in the world through
-                my diverse background, and my dedication to <strong>connect with people</strong> and resolve their problems.
-              </p>
-              <p>
-                Based in <strong>Vancouver, BC</strong>.
-              </p>
-            </div>
-            
           </div>
-          <div id = "introduction-right">
-            <img id = "profile-picture" class = "image-with-frame" src="resources/picture.png" alt="howard's picture"></img>
+          <div class = "paragraph-with-break">
+            <p>
+             ......through my background in <strong>design, computing science, and business</strong>. As well as
+             a dedication to <strong>connect with people</strong> and resolve their problems. Let's change the world together!
+            </p>
+            <p>
+              Based in <strong>Vancouver, BC</strong>.
+            </p>
           </div>
+          
+        </div>
+        <div id = "introduction-right">
+          <img id = "profile-picture" class = "image-with-frame" src="resources/picture.png" alt="howard's picture"></img>
+        </div>
       </section>
 
 <!--------------------------PROJECTS //-------------------------------------------------->
