--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div id = "title-heading">
             <h1 id = "heading-hello-howard">Hi! I'm Howard, a <strong>product designer</strong> seeking to......</h1>
             <div id ="heading-digital-product-designer">
-              <h1>CREATE A</h1>
+              <h1>CREATE</h1>
               <h1><span class = "kern-LA">L</span><span class = "kern-AS">A</span>STING</h1>
               <h1>IMPA<span class = "kern-CT">C</span>T</h1>
             </div>
