rabbitats client fix

--- a/rabbitats.html
+++ b/rabbitats.html
@@ -110,16 +110,15 @@
     <section id = "final-prototype-overview">
       <h1>Final Prototype Overview </h1>
       <div class = "vertical-stack sub-section">
-        <div class = "highlight-area flex-area">
+        <div id = "rabbitats-the-client" class = "highlight-area">
+          <h2 class = "center-heading-with-line">The Client</h2>
           <div>
-            <h2 class = "highlight-area-title">The Client</h2>
+            <img id = "rabbitats-logo" src="resources/rabbitats/rabbitats-logo.png" alt="Rabbitats Logo"></img>
             <div class = "paragraph-with-break">
               <p><strong>Rabbitats</strong> is a Richmond based rabbit rescue organization that was created in response to the feral rabbit epidemic in the area. </p>
               <p><strong>*The redesign proposal was created for academic purposes, and the team is not officially affiliated with Rabbitats.</strong> </p>
             </div>
-           
           </div>
-          <img id = "rabbitats-logo" src="resources/rabbitats/rabbitats-logo.png" alt="Rabbitats Logo"></img>
         </div>
         <div id = "rabbitats-web-preview" class = "flex-area sub-section">
           <div>
