added "fun project" section in home

--- a/index.html
+++ b/index.html
@@ -168,6 +168,41 @@
 
         </div> <!-- Project list -->
       </section> <!-- Project SECTION -->
+
+      <section id = "fun-projects">
+        <h1>Other Fun Projects </h1>
+         <!--list of fun projects-->
+         <div id = "fun-project-list" class = "grid-area">
+          <!--The Unfinished Symphony-->
+          <a href="javascript:void(0);" class="fun-project" id="unfinishedsymphony" onclick="toUnfinishedSymphony()">
+            <div class = "fun-project-external-icon"></div>
+            <div></div>
+            <div class = "fun-project-title">
+              <h2 class = "center-heading-with-line">The Unfinished Symphony</h2>
+              <div class = "fun-project-taglist">
+                <h3 class = "project-tag">Game Design</h3>
+                <h3 class = "project-tag">Unity Dev</h3>
+                <h3 class = "project-tag">UI/UX Design</h3>
+              </div>
+            </div>
+          </a>
+
+          <!--Small But Mighty-->
+          <a href="javascript:void(0);" class="fun-project" id="smallbutmighty" onclick="toSmallButMighty()">
+            <div class = "fun-project-external-icon"></div>
+            <div></div>
+            <div class = "fun-project-title">
+              <h2 class = "center-heading-with-line">Small But Mighty</h2>
+              <div class = "fun-project-taglist">
+                <h3 class = "project-tag">3D Animation</h3>
+                <h3 class = "project-tag">Web Design</h3>
+                <h3 class = "project-tag">Asset Design</h3>
+              </div>
+            </div>
+          </a>
+         </div>
+
+      </section>
     </div>
 <!--------------------------FOOTER //-------------------------------------------------->
     <footer>
