improve home page project write up

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h2>CraftConnect</h2>
                 <p>/2024</p>
               </div>
-              <p>Web platform aimed to help artisans find and retain their unique customer base, connecting handcraft consumers and local artisans.</p>
+              <p>Evolution of the handcraft market near you! A web platform aimed to help small independent artisans find, retain and connect with their unique handcraft customer base.</p>
               <div class = "project-right-bottom">
                 <div class = "project-tag-list">
                   <h3 class = "project-tag">User Research</h3>
@@ -105,7 +105,7 @@
                 <h2>Wealthsimple Redesign Proposal</h2>
                 <p>/2024</p>
               </div>
-              <p>Wealthsimple redesign and new feature proposals aimed at helping young users navigate the complexities of investing.</p>
+              <p>It's good to invest early, but it sure is hard to begin! Check out some new Wealthsimple feature and redesign proposals, making investing easy as a pie!</p>
               <div class = "project-right-bottom">
                 <div class = "project-tag-list">
                   <h3 class = "project-tag">HCI Research</h3>
@@ -123,7 +123,7 @@
                 <h2>ClosetShare</h2>
                 <p>/2024</p>
               </div>
-              <p>Cross-platform social app that helps users explore fashion, define their style, and connect with like-minded communities.</p>
+              <p>What do I wear today? No need to falter! Closetshare helps you explore fashion, define your style, and connect with like-minded fashionista communities.</p>
               <div class = "project-right-bottom">
                 <div class = "project-tag-list">
                   <h3 class = "project-tag">Mobile Development</h3>
@@ -141,7 +141,7 @@
                 <h2>Rabbitats Website Redesign</h2>
                 <p>/2023</p>
               </div>
-              <p>Strategy to improve Rabbitats’ website by highlighting its educational content.</p>
+              <p>What's a big step towards resolving pet rabbit abandonment? Education, education, EDUCATION! My attempt to improve Rabbitats’ website by highlighting its educational content.</p>
               <div class = "project-right-bottom">
                 <div class = "project-tag-list">
                   <h3 class = "project-tag">User Research</h3>
