--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h2>CraftConnect</h2>
                 <p>/2024</p>
               </div>
-              <p>Evolution of the handcraft market near you! A web platform aimed to help small independent artisans find, retain and connect with their unique handcraft customer base.</p>
+              <p>Evolution of the handcraft market near you! A web platform aimed to help small independent artisans find, retain, and connect with their unique handcraft customer base.</p>
               <div class = "project-right-bottom">
                 <div class = "project-tag-list">
                   <h3 class = "project-tag">User Research</h3>
