improved write up

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </div>
             </div>
           </a> <!--closetshare-->
-          
+
           <a href="javascript:void(0);" class="project" id="craftconnect" onclick="toCraftConnect()">
             <img id="craft-picture" class = "project-image"  src="resources/craftconnect.png" alt="craftconnect title slide">
             <div class="project-right">
@@ -105,7 +105,7 @@
                 <h2>CraftConnect</h2>
                 <p>/2024</p>
               </div>
-              <p>Evolution of the handcraft market near you! A web platform aimed to help small independent artisans find, retain, and connect with their unique handcraft customer base.</p>
+              <p>The next Evolution of handcraft markets near you! A web platform aimed to help small independent artisans find, retain, and connect with their unique handcraft customer base.</p>
               <div class = "project-right-bottom">
                 <div class = "project-tag-list">
                   <h3 class = "project-tag">User Research</h3>
