closetshare changed 1 line

--- a/closetshare.html
+++ b/closetshare.html
@@ -490,7 +490,8 @@
                 <h2>Outfit Filters</h2>
                 <div class="paragraph-with-break">
                   <p>
-                    Allow users to browse specific outfits based on 4 selected filter options.
+                    Allow users to browse specific outfits based on 4 selected filter options. Accomidating users with 
+                    diverse body types and heights. 
                   </p>
                 </div>
               </div>
