typos and other minor changes

--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
         <div class="about-single-goal-list">
           <div class="about-goal">
             <img src="resources/about/unchecked goal icon.png"></img>
-            <p>Replace my broken badminton racket</p>
+            <p>Attend 10+ hackathons</p>
           </div>
           <a class="about-goal-links" href="https://www.instagram.com/mr.bubblehoneytea/" target="_blank">
             <div class="about-goal">
