--- a/closetshare.html
+++ b/closetshare.html
@@ -110,16 +110,12 @@
       <div id = "closetshare-overview" class = "grid-area sub-section">
         <div id = "closetshare-overview-text" class = "paragraph-with-break">
           <p>
-            ClosetShare is an app that aims to inspire individuals to enhance their fashion sense and discover their unique 
-            style. It provides a platform for fashion enthusiasts to <strong>connect, share, and engage with local and global fashion communities.</strong>
+            <strong>ClosetShare</strong> is an app that aims to inspire individuals to enhance their fashion sense and discover their unique 
+            style, encouraging self-expression and shared inspiration. It provides a platform for fashion enthusiasts to <strong>connect, share, and engage with local and global fashion communities.</strong>
           </p>
           <p>
-            Users can <strong>showcase their outfits</strong> by uploading photos and sharing detailed information about each piece, including where they were 
-            purchased, making it easier for others to find and buy similar items. Also, the app allows users to <strong>explore a wide range of outfit 
-            inspirations</strong>, fostering creativity and collaboration. 
-          </p>
-          <p>
-            ClosetShare’s goal is to bridge the gap between personal style and community-driven fashion, encouraging self-expression and shared inspiration.
+            Users can explore a wide range of outfit inspirations uploaded by other users, including photos and shared detailed information about each outfit piece, such as where they were 
+            purchased, making it easier for others to find and buy similar items. 
           </p>
         </div>
         <div id = "closetshare-overview-image" class = "image-with-caption">
@@ -153,7 +149,7 @@
         <div id = "closetshare-research-question" class = "highlight-area">
           <h2 class = "center-heading-with-line">Primary Research Question</h2>
           <p>
-            How might we know more about the deficiencies of current avenues available for people loooking to find outfit 
+            How might we know more about the deficiencies of current avenues available for people looking to find outfit 
             inspirations or to improve their own style?
           </p>
         </div>
@@ -305,7 +301,7 @@
       <div id = "closetshare-research-question" class = "highlight-area">
         <h2 class = "center-heading-with-line">Key Takeaway</h2>
         <p>
-          Fashion lovers need a platform that not only showcases real outfits from real people, 
+          Fashion lovers need a platform that not only showcases real outfits from real everyday people, 
           but also <strong>accommodates diverse body types</strong>, offers <strong>precise search and filter tools</strong>, 
           and helps users <strong>find the exact pieces</strong> they need to recreate those looks.
         </p>
