--- a/closetshare.html
+++ b/closetshare.html
@@ -59,7 +59,7 @@
         <div id="project-brief-left"><!-- left side -->
           <div class="project-brief-element">
             <h3>Project Goal</h3>
-            <p>To design, develop, and deploy a fully functional cross-platform mobile fashion app using React Native.</p>
+            <p>To design, develop, and deploy a fully functional cross-platform mobile fashion app that can help people improve their fashion sense.</p>
           </div>
       
           <div class="project-brief-element">
