--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h2>ClosetShare</h2>
                 <p>/2024</p>
               </div>
-              <p>What do I wear today? No need to falter! Closetshare helps you explore fashion, define your style, and connect with like-minded fashionista communities.</p>
+              <p>What do I wear today? No need to falter! Closetshare helps you explore fashion, define your style, and connect with like-minded fashionista communities no matter who you are.</p>
               <div class = "project-right-bottom">
                 <div class = "project-tag-list">
                   <h3 class = "project-tag">Mobile Development</h3>
