--- a/rabbitats.html
+++ b/rabbitats.html
@@ -59,8 +59,8 @@
         <div id="project-brief-left"><!-- left side -->
           <div class="project-brief-element">
             <h3>Project Goal</h3>
-            <p>To propose a specific problem with the existing Rabbitats website, and develop a
-              evidence backed and rational strategy to resolve that problem.
+            <p>To identify a specific problem with the existing Rabbitats website, and develop a
+              evidence backed and rational strategy in line with Rabbitats' mission to resolve that problem.
             </p>
           </div>
       
