forgot a period literally

--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -59,7 +59,7 @@
         <div id="project-brief-left"><!-- left side -->
           <div class="project-brief-element">
             <h3>Project Goal</h3>
-            <p>To propose an evidence-based design solution that addresses young people’s barriers to long-term investing and encourages investment activity</p>
+            <p>To propose an evidence-based design solution that addresses young people’s barriers to long-term investing and encourages investment activity.</p>
           </div>
       
           <div class="project-brief-element">
