Added extra-strong property

--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
           </div>
           <div id="about-meeting-you" class="about-goal">
             <img src="resources/about/unchecked goal icon.png"></img>
-            <p><strong>Meeting YOU </strong></p>
+            <p><strong class = "extra-strong">Meeting YOU </strong></p>
           </div>
         </div>
       </div>
