--- a/closetshare.html
+++ b/closetshare.html
@@ -111,7 +111,7 @@
         <div id = "closetshare-overview-text" class = "paragraph-with-break">
           <p>
             <strong>ClosetShare</strong> is an app that aims to inspire individuals to enhance their fashion sense and discover their unique 
-            style, encouraging self-expression and shared inspiration. It provides a platform for fashion enthusiasts to <strong>connect, share, and engage with local and global fashion communities.</strong>
+            style, encouraging self-expression and shared inspiration. It provides a platform for fashion enthusiasts to <strong class = "extra-strong">connect, share, and engage with local and global fashion communities.</strong>
           </p>
           <p>
             Users can explore a wide range of outfit inspirations uploaded by other users, including photos and shared detailed information about each outfit piece, such as where they were 
@@ -598,7 +598,7 @@
     <h1>Key Reflections</h1>
     <div class = "vertical-stack">
       <div>
-        <h2><strong>Adaption</strong> is Key</h2>
+        <h2><strong class = "extra-strong">Adaption</strong> is Key</h2>
         <div class = "paragraph-with-break">
           <p>
             Development plans will likely need to be 
