--- a/craftconnect.html
+++ b/craftconnect.html
@@ -118,7 +118,7 @@
           </p>
         </div>
         <p>
-          CraftConnect is a proposed web platform that allows handcraft consumers to <strong>learn about, connect, and support their local artisans through various 
+          CraftConnect is a proposed web platform that allows handcraft consumers to <strong class = "extra-strong">learn about, connect, and support their local artisans through various 
           interactive features</strong> such as a map overview of nearby artisan shops, and an interactive booth page with customized notes sent to artisans, news boards,
           and more. It also serves as a <strong>centralized source of information</strong> about local artisans and the avenues they participate in.
         </p>
@@ -173,7 +173,7 @@
               Later on, I contacted over 30 local artisans and major handcraft consumers, and was able to arrange 5 interviews. I also served as the main interviewer for most of the interview process.
             </p>
             <p>
-              The conducted research revealed the importance of <strong>finding a niche dedicated target base</strong> for financial stability, yet currently artisans have <strong>limited opportunities to form meaningful connections</strong> with their customers. 
+              The conducted research revealed the importance of <strong class = "extra-strong">finding a niche dedicated target base</strong> for financial stability, yet currently artisans have <strong class = "extra-strong">limited opportunities to form meaningful connections</strong> with their customers. 
             </p>
             <p>
               Existing measures used in artisan shops tend to be ignored by customers, while markets and individual booths suffer from lower traffic due to the over reliance on word of mouth advertising.
@@ -357,7 +357,7 @@
        <!--final concept result-->
        <div id = "craftconnect-final-concept-result" class = "highlight-area sub-section">
         <p>
-          CraftConnect have received <strong>positive feedback from both artisan and craft consumer interviewees</strong>, validating the platform’s ability to resolve the original proposed problem.
+          CraftConnect have received <strong class = "extra-strong">positive feedback from both artisan and craft consumer interviewees</strong>, validating the platform’s ability to resolve the original proposed problem.
         </p>
        </div>
     </section>
@@ -370,7 +370,7 @@
         <div class = "paragraph-with-break">
           <p>
             This project’s long time duration allows for an opportunity to perform extensive research on our initially selected subject matter, and an opportunity to 
-            diverge, converge, or repivot concept and solutions. It is through these opportunities that I truly understood the significance of <strong>always seeking external
+            diverge, converge, or repivot concept and solutions. It is through these opportunities that I truly understood the significance of <strong class = "extra-strong">always seeking external
             and diverse perspectives and opinions.</strong>
           </p>
           <p>
