--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class = "paragraph-with-break">
               <p>
-               ......through my background in <strong>design, computing science, and business</strong>. As well as
+               ......through my background in <strong class = "extra-strong">design, computing science, and business</strong>. As well as
                a dedication to <strong>connect with people</strong> and resolve their problems. Let's change the world together!
               </p>
               <p>
