--- a/rabbitats.html
+++ b/rabbitats.html
@@ -185,7 +185,7 @@
 
         <div class = "paragraph-with-break">
           <p>From not just my personal experiences, but as well as local news report and social forum insights, one common theme in relation to pet rabbit abandonments, is the <strong>lack of education among current and prospective rabbit keepers.</strong></p>
-          <p>With this in mind, on top of a thorough evalution of Rabbitat's website, I proposed <strong>education as the prospective design focus</strong>, and the direction of improving the education 
+          <p>With this in mind, on top of a thorough evalution of Rabbitat's website, I proposed <strong class = "extra-strong">education as the prospective design focus</strong>, and the direction of improving the education 
             experience for prospective and current rabbit adopters navigating the current website. As my evaluation had concluded that 
             Rabbitat’s website is far behind in this area compare to other aspects such as donations and adoptions.</p>
         </div>
@@ -218,7 +218,7 @@
                    <p>One main source for the wild rabbit epidemic in the greater Metro Vancouver area can be traced back 
                      to pet abandonment caused by a lack of reliable rabbit keeping knowledge. Considering Rabbitats goals, 
                        <strong>education</strong> should be a key aspect of the webpage.</p>
-                   <p>While the site has a page dedicated to education, the <strong>education aspect is barely showcased and promoted on the home page</strong>, 
+                   <p>While the site has a page dedicated to education, the <strong class = "extra-strong">education aspect is barely showcased and promoted on the home page</strong>, 
                      which reduces user engagement. Instead, the focus is placed on the other 3 areas, recruiting volunteers, donations, and 
                      adoptions.</p>
                  </div>
@@ -361,7 +361,7 @@
               playing more of a leadership role. 
             </p>
             <p>
-              One key takeaway of this project is the need for a <strong>realistic yet still effective scoping</strong> for the prototype. Given the time limit, 
+              One key takeaway of this project is the need for a <strong class = "extra-strong">realistic yet still effective scoping</strong> for the prototype. Given the time limit, 
              it is vital to target specific weak points on the website (after researching the client and its goals) instead 
               of redesigning the entire website. As too large of a scope will result in the team being too spread out, leading to a less 
               effective redesign.
