--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -441,7 +441,7 @@
           <p>
             For my design proposals that aims to ease investment learning curve and provide additional tools to support users during the 
             investment process, all solutions are evidence based, and results of extensive research of peer reviewed research. When 
-            design is <strong>based on well founded research and concrete evidence</strong>, and not simply subjective assumptions, they become far more 
+            design is <strong class = "extra-strong">based on well founded research and concrete evidence</strong>, and not simply subjective assumptions, they become far more 
             justifiable.
           </p>
         </div>
