--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     <div id = "content">
 <!--------------------------INTRODUCTION //-------------------------------------------------->
+<!--
       <section id = "introduction">
         <div id = "introduction-grid" class = "grid-area">
           <div id = "introduction-left" class = "vertical-stack">
@@ -76,6 +77,32 @@
         </div>
 
       </section>
+    -->     
+    <section id = "introduction">
+      <div id = "title-heading" class = "vertical-stack">
+        <div id = "intro-h2">
+          <h2 class = "heading-hello-howard">Hi, I'm Howard!</h2>
+          <h2 class = "heading-hello-howard">A <strong class = "extra-strong">product designer</strong> seeking to......</h2>
+        </div>
+        <div id ="heading-digital-product-designer">
+          <h1>CREATE <span class = "kern-LA">L</span><span class = "kern-AS">A</span>STING IMPA<span class = "kern-CT">C</span>T</h1>
+        </div>
+        <div id = "intro-paragraph" class = "paragraph-with-break">
+          <p>
+            through my background in <strong class = "extra-strong">design, computing science, and business</strong>. As well as
+            a dedication to <strong>connect with people</strong> and resolve their problems. Let's change the world together!
+          </p>
+          <p>
+            Based in <strong>Vancouver, BC</strong>.
+          </p>
+        </div>
+        <div id = "scroll-down-arrow">
+          <img id = "scroll-down-arrow-image" src="resources/scroll down arrow.png" alt="scroll down!"></img>
+        </div>
+      </div>
+             
+
+    </section>
 <!--------------------------PROJECTS //-------------------------------------------------->
       <section id = "projects">
         <h1>Featured Projects </h1>
