--- a/closetshare.html
+++ b/closetshare.html
@@ -289,7 +289,7 @@
               </div>
               <div class = "closetshare-avenue-issue-right">
                 <p>In-community bias for outfit posts</p>
-                <figcaption>"Most of the popular otufits on that forum looks so boring and bland to me."</figcaption>
+                <figcaption>"Most of the popular outfits on that forum looks so boring and bland to me."</figcaption>
               </div>
             </div>
            
