added fira code font, added h2 with dots

--- a/closetshare.html
+++ b/closetshare.html
@@ -8,7 +8,7 @@
     <title>ClosetShare || Howard Chang </title>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -598,7 +598,10 @@
     <h1>Key Reflections</h1>
     <div class = "vertical-stack">
       <div>
-        <h2><strong class = "extra-strong">Adaption</strong> is Key</h2>
+        <div class = "h2-with-dot">
+          <img src="resources/h2 dot.png" alt="a dot"></img>
+          <h2><strong class = "extra-strong">Adaption</strong> is Key</h2>
+        </div>
         <div class = "paragraph-with-break">
           <p>
             Development plans will likely need to be 
@@ -615,7 +618,10 @@
       </div>
   
       <div>
-        <h2>Design choice vs implementation </h2>
+        <div class = "h2-with-dot">
+          <img src="resources/h2 dot.png" alt="a dot"></img>
+          <h2>Design choice vs implementation </h2>
+        </div>
         <div id = "closetshare-reflection-B-content" class = "grid-area">
           <div class = "paragraph-with-break">
             <p>
