--- a/craftconnect.html
+++ b/craftconnect.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -363,14 +363,17 @@
     </section>
 
     <!--------------------------KEY REFLECTIONS //-------------------------------------------------->
-    <section id = "key-reflections">
+    <section id="key-reflections">
       <h1>Key Reflections</h1>
-      <div class = "sub-section">
-        <h2>Importance of seeking additional perspectives </h2>
-        <div class = "paragraph-with-break">
+      <div class="sub-section">
+        <div class="h2-with-dot">
+          <img src="resources/h2 dot.png" alt="a dot"></img>
+          <h2>Importance of seeking additional perspectives</h2>
+        </div>
+        <div class="paragraph-with-break">
           <p>
             This project’s long time duration allows for an opportunity to perform extensive research on our initially selected subject matter, and an opportunity to 
-            diverge, converge, or repivot concept and solutions. It is through these opportunities that I truly understood the significance of <strong class = "extra-strong">always seeking external
+            diverge, converge, or repivot concept and solutions. It is through these opportunities that I truly understood the significance of <strong class="extra-strong">always seeking external
             and diverse perspectives and opinions.</strong>
           </p>
           <p>
@@ -387,7 +390,6 @@
       <button class="button" onclick="location.href='index.html#projects'">
         &larr; See my other work!
       </button>
-      
     </section>
   </div>
 
