--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -8,7 +8,7 @@
     <title>Wealthsimple Redesign Proposal || Howard Chang </title>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -433,20 +433,26 @@
     </section>
 
     <!--------------------------KEY REFLECTIONS //-------------------------------------------------->
-    <section id = "key-reflections">
+    <section id="key-reflections">
       <h1>Key Reflections</h1>
-      <div class = "vertical-stack sub-section">
+      <div class="vertical-stack sub-section">
         <div>
-          <h2>Design solutions should be based on evidence</h2>
+          <div class="h2-with-dot">
+            <img src="resources/h2 dot.png" alt="a dot"></img>
+            <h2>Design solutions should be based on evidence</h2>
+          </div>
           <p>
             For my design proposals that aims to ease investment learning curve and provide additional tools to support users during the 
             investment process, all solutions are evidence based, and results of extensive research of peer reviewed research. When 
-            design is <strong class = "extra-strong">based on well founded research and concrete evidence</strong>, and not simply subjective assumptions, they become far more 
+            design is <strong class="extra-strong">based on well founded research and concrete evidence</strong>, and not simply subjective assumptions, they become far more 
             justifiable.
           </p>
         </div>
-        <div >
-          <h2>Importance of “unflattening” in design</h2>
+        <div>
+          <div class="h2-with-dot">
+            <img src="resources/h2 dot.png" alt="a dot"></img>
+            <h2>Importance of “unflattening” in design</h2>
+          </div>
           <p>
             Through this project, I experienced first hand the value in the idea of “unflattening”, taking information and knowledge from a 
             diverse set of fields, and combining them to for design solutions. During our research, we explored human cognition theories, 
@@ -455,8 +461,7 @@
           </p>
         </div>
       </div>
-     
-
+    
       <button class="button" onclick="location.href='index.html#projects'">
         &larr; See my other work!
       </button>
