--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <title>About || Howard Chang </title>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -57,7 +57,10 @@
           <img src="resources/about/about-portrait.png" alt="Picture of me!"></img>
         </div>
         <div class>
-          <h2>A bit about me and my background......</h2>
+          <div class = "h2-with-dot">
+            <img src="resources/h2 dot.png" alt="a dot"></img>
+            <h2>A bit about me and my background......</h2>
+          </div>
           <div class = "paragraph-with-break">
             <p>
               I am an aspiring <strong>product and UX designer</strong>. 
@@ -77,7 +80,10 @@
       </div>
 
       <div id = "about-other-activities" class = "sub-section">
-        <h2>When I'm not creating slay projects, I......</h2>
+        <div class = "h2-with-dot">
+          <img src="resources/h2 dot.png" alt="a dot"></img>
+          <h2>When I'm not creating slay projects, I......</h2>
+        </div>
         <div id = "about-activity-list" class = "grid-area">
           <div id = "about-activity-keep-fish" class = "about-activity-tile">
             <h2 class = "center-heading-with-line">Keep fish</h2>
