--- a/rabbitats.html
+++ b/rabbitats.html
@@ -8,7 +8,7 @@
     <title>Rabbitats Website Redesign || Howard Chang </title>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -350,30 +350,36 @@
     </section>
 
     <!--------------------------KEY REFLECTIONS //-------------------------------------------------->
-    <section id = "key-reflections">
+    <section id="key-reflections">
       <h1>Key Reflections</h1>
-      <div class = "vertical-stack sub-section">
+      <div class="vertical-stack sub-section">
         <div>
-          <h2>Constraints are important</h2>
-          <div class = "paragraph-with-break">
+          <div class="h2-with-dot">
+            <img src="resources/h2 dot.png" alt="a dot"></img>
+            <h2>Constraints are important</h2>
+          </div>
+          <div class="paragraph-with-break">
             <p>
               This month long project is one of my first cracks into a time based collaborative design project, as well as the experience of 
               playing more of a leadership role. 
             </p>
             <p>
-              One key takeaway of this project is the need for a <strong class = "extra-strong">realistic yet still effective scoping</strong> for the prototype. Given the time limit, 
-             it is vital to target specific weak points on the website (after researching the client and its goals) instead 
+              One key takeaway of this project is the need for a <strong class="extra-strong">realistic yet still effective scoping</strong> for the prototype. Given the time limit, 
+              it is vital to target specific weak points on the website (after researching the client and its goals) instead 
               of redesigning the entire website. As too large of a scope will result in the team being too spread out, leading to a less 
               effective redesign.
             </p>
           </div>
         </div>
         <div>
-          <h2>Proper research lead to personalized design solutions</h2>
+          <div class="h2-with-dot">
+            <img src="resources/h2 dot.png" alt="a dot"></img>
+            <h2>Proper research lead to personalized design solutions</h2>
+          </div>
           <p>
             Another key is the <strong>importance of proper research</strong>, and the need to <strong>personalize the design strategy for each client</strong>. The main problems
-             and associated solutions are all rooted back to our extensive research on the organization itself and the environmental concerns 
-             surrounding it. Without that knowledge and the organization’s needs in mind, the solution would not had been as appropriate. 
+            and associated solutions are all rooted back to our extensive research on the organization itself and the environmental concerns 
+            surrounding it. Without that knowledge and the organization’s needs in mind, the solution would not had been as appropriate. 
           </p>
         </div>
       </div>
