--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -31,6 +31,7 @@
             <a href="https://drive.google.com/file/d/1ql-y7xnuWvTgu4U-2e-PBAdfqSrUpSUy/view?usp=sharing" target="_blank" rel="noopener noreferrer">Resume</a>
           </div>
         </nav>
+        <div id = "progress-bar"></div>
       </div>
     </header>
 
